# potato-generator

./: .gitignore  CMakeLists.txt  README.md  planet.stl  potato.py
include/: potato.h
src/: main.cpp  potato.cpp
